tests/models/enum/named/u64/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1.0)]
        u64
    ),
}
fn main() {}
